--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="uk">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Студія</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+<title>Студія</title>
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    /*header!!!*/
-    <header class="header">
-        <div class="header-container container">
+              <div class="header-container container">
             <a class="logo" href="/index.html">Web<span class="logo-header">Studio</span></a>
 
             <nav class="header-nav">
@@ -33,26 +29,25 @@
                         <a class="link-second current" href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li class="header-nav-item">
-                        <a href="" class="header-nav link-second">Контакти</a>
+                        <a href="header-nav-item" class="header-nav link-second">Контакти</a>
                     </li>
                 </ul>
             </nav>
-            <div class="header-contacts">
+                <div class="header-contacts"></div>
                 <ul class="list list">
                     <li>
-                        <a class="header-nav link-mail" target="_blank" rel="noopener noreferrer nofollow"
-                            href="mailto:info@devstudio.com">
-                            info@devstudio.com</a>
+                        <a class="header-nav link-mail" target="_blank"
+                         rel="noopener noreferrer nofollow"
+                        href="mailto:info@devstudio.com">
+                        info@devstudio.com</a>
                     </li>
                     <li>
                         <a class="header-nav link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
-            </div>
-        </div>
+                </div>
     </header>
 
-    /*hero*/
     <main>
         <div>
             <section class="hero">
@@ -91,7 +86,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="profile">
             <div class="container">
                 <h2 class="our-profile">Чим ми займаємося</h2>
 
@@ -115,15 +110,15 @@
             <div class="container">
                 <h2 class="our-team">Наша команда</h2>
                 <ul class="decision-pro">
-                    <li class="img">
+                    <li class="our">
                         <img class="pro" src="./images/designer.jpg" alt="Дизайнер-Ігор" width="270" height="260">
-                        <div class="name-profession"></div>
+                        <div class="name-profession">
                         <p class="name">Ігор Дем'яненко</p>
                         <p class="profession">Product Designer</p>
             </div>
             </li>
 
-            <li class="img">
+            <li class="our">
                 <img class="pro" src="./images/frontend.jpg" alt="Фронтенд-Ольга" width="270" height="260">
                 <div class="name-profession">
                     <p class="name">Ольга Рєпіна</p>
@@ -131,7 +126,7 @@
                 </div>
             </li>
 
-            <li class="img">
+            <li class="our">
                 <img class="pro" src="./images/marketing.jpg" alt="Маркетинг-Микола" width="270" height="260">
                 <div class="name-profession">
                     <p class="name">Микола Тарасов</p>
@@ -139,7 +134,7 @@
                 </div>
             </li>
 
-            <li class="img">
+            <li class="our">
                 <img class="pro" src="./images/ui.jpg" alt="Користувацький-інтерфейс-Михайло" width="270" height="260">
                 <div class="name-profession">
                     <p class="name">Михайло Єрмаков</p>
@@ -151,9 +146,7 @@
         </section>
     </main>
 
-    /*footer*/
-
-    <footer class="footer">
+       <footer class="footer">
         <div class="container">
             <a class="logo" href="/index.html">Web<span class="logo-footer">Studio</span></a>
             <address>
