--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,7 @@
 </head>
 
 <body>
-    <header class="header">
-    <div class="header-container container">
+       <div class="header-container container">
         <a class="logo" href="/index.html">Web<span class="logo-header">Studio</span></a>
 
         <nav class="header-nav">
@@ -30,11 +29,11 @@
                     <a class="link-first current" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li class="header-nav-item">
-                    <a href="" class="header-nav link-second">Контакти</a>
+                    <a href="header-nav-item" class="header-nav link-second">Контакти</a>
                 </li>
             </ul>
         </nav>
-            <div class="header-contacts">
+            <div class="header-contacts"></div>
             <ul class="list list">
                 <li>
                     <a class="header-nav link-mail" target="_blank" 
@@ -47,7 +46,6 @@
                 </li>
             </ul>
             </div>
-    </div>
     </header>
 
     <main>
@@ -73,63 +71,63 @@
                 </ul>
         
                 <ul class="decision-gallery">
-                    <li>
+                    <li class="gallery">
                         <img src="./images/website-techno.jpg" alt="Веб-сайт-Технокряк" 
                         width="370" 
                         height="294">
                         <h2 class="example">Технокряк</h2>
                         <h2 class="direction">Веб-сайт</h2>
                     </li>
-                    <li>
+                    <li class="gallery">
                         <img src="./images/design-poster.jpg" alt="Дизайн-постер"       
                         width="370" 
                         height="294">
                         <h2 class="example">Постер New Orlean vs Golden Star</h2>
                         <h2 class="direction">Дизайн</h2>
                     </li>
-                    <li>
+                    <li class="gallery">
                         <img src="./images/app-restaurant.jpg" alt="Додаток-ресторан" 
                         width="370" 
                         height="294">
                         <h2 class="example">Ресторан Seafood</h2>
                         <h2 class="direction">Додаток</h2>
                     </li>
-                    <li>
+                    <li class="gallery">
                         <img src="./images/marketing-prime.jpg" alt="Маркетинг-прайм" 
                         width="370" 
                         height="294">
                         <h2 class="example">Проєкт Prime</h2>
                         <h2 class="direction">Маркетинг</h2>
                     </li>
-                    <li>
+                    <li class="gallery">
                         <img src="./images/app-boxes.jpg" alt="Додаток-коробки" 
                         width="370" 
                         height="294">
                         <h2 class="example">Проєкт Boxes</h2>
                         <h2 class="direction">Додаток</h2>
                     </li>
-                    <li>
+                    <li class="gallery">
                         <img src="./images/website-inspiration.jpg" alt="Веб-сайт-натхнення" 
                         width="370" 
                         height="294">
                         <h2 class="example">Inspiration has no Borders</h2>
                         <h2 class="direction">Веб-сайт</h2>
                     </li>
-                    <li>
+                    <li class="gallery">
                         <img src="./images/desing-edition.jpg" alt="Дизайн-видання" 
                         width="370" 
                         height="294">
                         <h2 class="example">Видання Limited Edition</h2>
                         <h2 class="direction">Дизайн</h2>
                     </li>
-                    <li>
+                    <li class="gallery">
                         <img src="./images/marketing-lab.jpg" alt="Маркетинг-проект" 
                         width="370" 
                         height="294">
                         <h2 class="example">Проєкт LAB</h2>
                         <h2 class="direction">Маркетинг</h2>
                     </li>
-                    <li>
+                    <li class="gallery">
                         <img src="./images/app-business.jpg" alt="Додаток-бізнес" 
                         width="370" 
                         height="294">
