--- a/portfolio.html
+++ b/portfolio.html
@@ -72,63 +72,63 @@
         
                 <ul class="decision-gallery">
                     <li class="gallery">
-                        <img src="./images/website-techno.jpg" alt="Веб-сайт-Технокряк" 
+                        <img src="./images/techno.jpg" alt="Веб-сайт-Технокряк" 
                         width="370" 
                         height="294">
                         <h2 class="example">Технокряк</h2>
                         <h2 class="direction">Веб-сайт</h2>
                     </li>
                     <li class="gallery">
-                        <img src="./images/design-poster.jpg" alt="Дизайн-постер"       
+                        <img src="./images/poster.jpg" alt="Дизайн-постер"       
                         width="370" 
                         height="294">
                         <h2 class="example">Постер New Orlean vs Golden Star</h2>
                         <h2 class="direction">Дизайн</h2>
                     </li>
                     <li class="gallery">
-                        <img src="./images/app-restaurant.jpg" alt="Додаток-ресторан" 
+                        <img src="./images/app-1.jpg" alt="Додаток-ресторан" 
                         width="370" 
                         height="294">
                         <h2 class="example">Ресторан Seafood</h2>
                         <h2 class="direction">Додаток</h2>
                     </li>
                     <li class="gallery">
-                        <img src="./images/marketing-prime.jpg" alt="Маркетинг-прайм" 
+                        <img src="./images/imeg-6.jpg" alt="Маркетинг-прайм" 
                         width="370" 
                         height="294">
                         <h2 class="example">Проєкт Prime</h2>
                         <h2 class="direction">Маркетинг</h2>
                     </li>
                     <li class="gallery">
-                        <img src="./images/app-boxes.jpg" alt="Додаток-коробки" 
+                        <img src="./images/app-2.jpg" alt="Додаток-коробки" 
                         width="370" 
                         height="294">
                         <h2 class="example">Проєкт Boxes</h2>
                         <h2 class="direction">Додаток</h2>
                     </li>
                     <li class="gallery">
-                        <img src="./images/website-inspiration.jpg" alt="Веб-сайт-натхнення" 
+                        <img src="./images/imeg-7.jpg" alt="Веб-сайт-натхнення" 
                         width="370" 
                         height="294">
                         <h2 class="example">Inspiration has no Borders</h2>
                         <h2 class="direction">Веб-сайт</h2>
                     </li>
                     <li class="gallery">
-                        <img src="./images/desing-edition.jpg" alt="Дизайн-видання" 
+                        <img src="./images/imeg-4.jpg" alt="Дизайн-видання" 
                         width="370" 
                         height="294">
                         <h2 class="example">Видання Limited Edition</h2>
                         <h2 class="direction">Дизайн</h2>
                     </li>
                     <li class="gallery">
-                        <img src="./images/marketing-lab.jpg" alt="Маркетинг-проект" 
+                        <img src="./images/imeg-5.jpg" alt="Маркетинг-проект" 
                         width="370" 
                         height="294">
                         <h2 class="example">Проєкт LAB</h2>
                         <h2 class="direction">Маркетинг</h2>
                     </li>
                     <li class="gallery">
-                        <img src="./images/app-business.jpg" alt="Додаток-бізнес" 
+                        <img src="./images/app-3.jpg" alt="Додаток-бізнес" 
                         width="370" 
                         height="294">
                         <h2 class="example">Growing Business</h2>
