--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="styles.css">
     
     <title>Студія</title>
 </head>
@@ -92,15 +93,15 @@
 
                 <ul class="decision">
                     <li>
-                        <img src="./images/imeg-1.jpg" alt="Десктопний додаток" width="370" height="294">
+                        <img src="./images/desktop.jpg" alt="Десктопний додаток" width="370" height="294">
                     </li>
 
                     <li>
-                        <img src="./images/imeg-2.jpg" alt="Мобільний додаток" width="370" height="294">
+                        <img src="./images/mobile.jpg" alt="Мобільний додаток" width="370" height="294">
                     </li>
 
                     <li>
-                        <img src="./images/imeg-3.jpg" alt="Дизайн" width="370" height="294">
+                        <img src="./images/design.jpg" alt="Дизайн" width="370" height="294">
                     </li>
                 </ul>
             </div>
@@ -111,7 +112,7 @@
                 <h2 class="our-team">Наша команда</h2>
                 <ul class="decision-pro">
                     <li class="our">
-                        <img class="pro" src="./images/ihor-designer.jpg" alt="Дизайнер-Ігор" width="270" height="260">
+                        <img class="pro" src="./images/designer.jpg" alt="Дизайнер-Ігор" width="270" height="260">
                         <div class="name-profession">
                         <p class="name">Ігор Дем'яненко</p>
                         <p class="profession">Product Designer</p>
@@ -119,7 +120,7 @@
             </li>
 
             <li class="our">
-                <img class="pro" src="./images/olha-frontend.jpg" alt="Фронтенд-Ольга" width="270" height="260">
+                <img class="pro" src="./images/frontend.jpg" alt="Фронтенд-Ольга" width="270" height="260">
                 <div class="name-profession">
                     <p class="name">Ольга Рєпіна</p>
                     <p class="profession">Frontend Developer</p>
@@ -127,7 +128,7 @@
             </li>
 
             <li class="our">
-                <img class="pro" src="./images/mukola-marketing.jpg" alt="Маркетинг-Микола" width="270" height="260">
+                <img class="pro" src="./images/marketing.jpg" alt="Маркетинг-Микола" width="270" height="260">
                 <div class="name-profession">
                     <p class="name">Микола Тарасов</p>
                     <p class="profession">Marketing</p>
@@ -135,7 +136,7 @@
             </li>
 
             <li class="our">
-                <img class="pro" src="./images/michail-ui.jpg" alt="Користувацький-інтерфейс-Михайло" width="270" height="260">
+                <img class="pro" src="./images/ui.jpg" alt="Користувацький-інтерфейс-Михайло" width="270" height="260">
                 <div class="name-profession">
                     <p class="name">Михайло Єрмаков</p>
                     <p class="profession">UI Designer</p>
