--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-       <div class="header-container container">
+    <header class="header"></header>
+        <div class="container flex">
         <a class="logo" href="/index.html">Web<span class="logo-header">Studio</span></a>
 
         <nav class="header-nav">
@@ -76,64 +77,82 @@
                         <img src="./images/website-techno.jpg" alt="Веб-сайт-Технокряк" 
                         width="370" 
                         height="294">
-                        <h2 class="example">Технокряк</h2>
-                        <h2 class="direction">Веб-сайт</h2>
+                        <div class="card">
+                            <h2 class="example">Технокряк</h2>
+                            <p class="direction">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="gallery">
                         <img src="./images/design-poster.jpg" alt="Дизайн-постер"       
                         width="370" 
                         height="294">
-                        <h2 class="example">Постер New Orlean vs Golden Star</h2>
-                        <h2 class="direction">Дизайн</h2>
+                        <div class="card">
+                            <h2 class="example">Постер New Orlean vs Golden Star</h2>
+                            <p class="direction">Дизайн</p>
+                        </div>
                     </li>
                     <li class="gallery">
                         <img src="./images/app-restaurant.jpg" alt="Додаток-ресторан" 
                         width="370" 
                         height="294">
-                        <h2 class="example">Ресторан Seafood</h2>
-                        <h2 class="direction">Додаток</h2>
+                        <div class="card">
+                            <h2 class="example">Ресторан Seafood</h2>
+                            <p class="direction">Додаток</p>
+                        </div>
                     </li>
                     <li class="gallery">
                         <img src="./images/marketing-prime.jpg" alt="Маркетинг-прайм" 
                         width="370" 
                         height="294">
-                        <h2 class="example">Проєкт Prime</h2>
-                        <h2 class="direction">Маркетинг</h2>
+                        <div class="card">
+                            <h2 class="example">Проєкт Prime</h2>
+                            <p class="direction">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="gallery">
                         <img src="./images/app-boxes.jpg" alt="Додаток-коробки" 
                         width="370" 
                         height="294">
-                        <h2 class="example">Проєкт Boxes</h2>
-                        <h2 class="direction">Додаток</h2>
+                       <div class="card">
+                            <h2 class="example">Проєкт Boxes</h2>
+                            <p class="direction">Додаток</p>
+                        </div>
                     </li>
                     <li class="gallery">
                         <img src="./images/website-inspiration.jpg" alt="Веб-сайт-натхнення" 
                         width="370" 
                         height="294">
-                        <h2 class="example">Inspiration has no Borders</h2>
-                        <h2 class="direction">Веб-сайт</h2>
+                        <div class="card">
+                            <h2 class="example">Inspiration has no Borders</h2>
+                            <p class="direction">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="gallery">
                         <img src="./images/desktop.jpg" alt="Дизайн-видання" 
                         width="370" 
                         height="294">
-                        <h2 class="example">Видання Limited Edition</h2>
-                        <h2 class="direction">Дизайн</h2>
+                        <div class="card">
+                            <h2 class="example">Видання Limited Edition</h2>
+                            <p class="direction">Дизайн</p>
+                        </div>
                     </li>
                     <li class="gallery">
                         <img src="./images/marketing-lab.jpg" alt="Маркетинг-проект" 
                         width="370" 
                         height="294">
+                    <div class="card">
                         <h2 class="example">Проєкт LAB</h2>
-                        <h2 class="direction">Маркетинг</h2>
+                        <p class="direction">Маркетинг</p>
+                    </div>
                     </li>
                     <li class="gallery">
                         <img src="./images/app-business.jpg" alt="Додаток-бізнес" 
                         width="370" 
                         height="294">
+                    <div class="card">
                         <h2 class="example">Growing Business</h2>
-                        <h2 class="direction">Додаток</h2>
+                        <p class="direction">Додаток</p>
+                    </div>
                     </li>
                 </ul>
                 </div>
