--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <div class="header-container container">
+    <header class="header">
+    <div class="container flex">
         <a class="logo" href="/index.html">Web<span class="logo-header">Studio</span></a>
 
         <nav class="header-nav">
